# bobberick-tools

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
bobberick/: CMakeLists.txt
bobberick-demo/: BobberGame.cpp  BobberGame.h  BobberickGame.cpp  BobberickGame.h  CMakeLists.txt  SplashScreenState.cpp  SplashScreenState.h  StateFactory.cpp  StateFactory.h  main.cpp
bobberick-demo/assets/: map1.tmx
bobberick-demo/assets/maps/: dungeon_landscape.tsx  main_menu.tmx  map1.tmx  map2.tmx  map3.tmx  map4.tmx  map5.tmx
bobberick-demo/components/: AIComponent.h  AdvertisementComponent.cpp  AdvertisementComponent.h  BulletComponent.cpp  BulletComponent.h  BulletMovementComponent.cpp  BulletMovementComponent.h  ButtonSettingComponent.cpp  ButtonSettingComponent.h  ChaseComponent.cpp  ChaseComponent.h  DamageComponent.cpp  DamageComponent.h  DeadComponent.cpp  DeadComponent.h  EndBossComponent.cpp  EndBossComponent.h  EnemyMovementComponent.cpp  EnemyMovementComponent.h  HealthBarComponent.cpp  HealthBarComponent.h  InventoryComponent.cpp  InventoryComponent.h  InventorySlotComponent.cpp  InventorySlotComponent.h  ItemComponent.h  LimitedTimeComponent.cpp  LimitedTimeComponent.h  PickUpComponent.cpp  PickUpComponent.h  PlayerComponent.h  PlayerMovementComponent.cpp  PlayerMovementComponent.h  PlayerStatsComponent.cpp  PlayerStatsComponent.h  ShootComponent.cpp  ShootComponent.h  SkillsComponent.cpp  SkillsComponent.h  SpawnComponent.cpp  (+11 more)
bobberick-demo/factory/: ObjectFactory.cpp  ObjectFactory.h  WeaponFactory.cpp  WeaponFactory.h
bobberick-demo/factory/enemies/: BaseEnemyFactory.h  BirdFactory.cpp  BirdFactory.h  ChickenFactory.cpp  ChickenFactory.h  DevilFactory.cpp  DevilFactory.h  EndBossFactory.cpp  EndBossFactory.h  EnemyFactory.cpp  EnemyFactory.h  EnemyManufactureFactory.cpp  EnemyManufactureFactory.h  FireWizardFactory.cpp  FireWizardFactory.h  NullFactory.cpp  NullFactory.h  OrcFactory.cpp  OrcFactory.h  ZombieFactory.cpp  ZombieFactory.h
bobberick-demo/services/: HighscoreService.cpp  HighscoreService.h  PlayerStatsService.cpp  PlayerStatsService.h
bobberick-demo/src/states/: CreditScreenState.cpp  CreditScreenState.h
bobberick-demo/state/: CreditScreenState.cpp  CreditScreenState.h  EndScreenState.cpp  EndScreenState.h  GameOverState.cpp  GameOverState.h  HelpScreenState.cpp  HelpScreenState.h  HighscoreState.cpp  HighscoreState.h  KeyMappingState.cpp  KeyMappingState.h  Level1State.cpp  Level1State.h  Level2State.cpp  Level2State.h  Level3State.cpp  Level3State.h  Level4State.cpp  Level4State.h  MainMenuState.cpp  MainMenuState.h  PauseScreenState.cpp  PauseScreenState.h  PlayState.cpp  PlayState.h  SettingsScreenState.cpp  SettingsScreenState.h  SkillScreenState.cpp  SkillScreenState.h  SplashScreenState.cpp  SplashScreenState.h  StateFactory.cpp  StateFactory.h  TestState.cpp  TestState.h
bobberick-demo/systems/: AISystem.cpp  AISystem.h  AdvertisementSystem.cpp  AdvertisementSystem.h  BulletSystem.cpp  BulletSystem.h  CheatSystem.cpp  CheatSystem.h  CollisionHandlingSystem.cpp  CollisionHandlingSystem.h  CollisionSystem.cpp  CollisionSystem.h  DeadSystem.cpp  DeadSystem.h  HudSystem.cpp  HudSystem.h  KeyMappingSystem.cpp  KeyMappingSystem.h  LevelSystem.cpp  LevelSystem.h  MenuSystem.cpp  MenuSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  PlayerMovementSystem.cpp  PlayerMovementSystem.h  ShieldSystem.cpp  ShieldSystem.h
bobberick-framework/: CMakeLists.txt
bobberick-framework/cmake/modules/: FindBox2D.cmake  FindTMXLITE.cmake  SelectLibraryConfigurations.cmake
bobberick-framework/src/: EmptyState.cpp  EmptyState.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  GameState.cpp  GameState.h  LevelFactory.cpp  LevelFactory.h  RectangleManager.h  SoundManager.cpp  SoundManager.h  SplashScreenState.cpp  SplashScreenState.h  StateFactory.cpp  StateFactory.h  StateMachine.cpp  StateMachine.h  TextureManager.cpp  TextureManager.h  main.cpp
bobberick-framework/src/entity/: CollisionHelper.cpp  CollisionHelper.h  Component.cpp  Component.h  ECS.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
bobberick-framework/src/entity/components/: ButtonComponent.cpp  ButtonComponent.h  ButtonSpriteComponent.cpp  ButtonSpriteComponent.h  CollisionComponent.cpp  CollisionComponent.h  FadeComponent.cpp  FadeComponent.h  ParticleComponent.cpp  ParticleComponent.h  ParticleSystemComponent.cpp  ParticleSystemComponent.h  PlayerShootComponent.cpp  PlayerShootComponent.h  PlayerStatsComponent.cpp  PlayerStatsComponent.h  RectangleComponent.cpp  RectangleComponent.h  ShootComponent.cpp  ShootComponent.h  SpriteComponent.cpp  SpriteComponent.h  StatsComponent.cpp  StatsComponent.h  TextComponent.cpp  TextComponent.h  Tile.cpp  Tile.h  TileObject.cpp  TileObject.h  TileSetComponent.cpp  TileSetComponent.h  TilesetComponent.cpp  TilesetComponent.h  TimerComponent.cpp  TimerComponent.h  TransformComponent.cpp  (+1 more)
bobberick-framework/src/services/: CameraManager.cpp  CameraManager.h  FontManager.cpp  FontManager.h  FrameHandler.cpp  FrameHandler.h  InputHandler.cpp  InputHandler.h  RectangleManager.cpp  RectangleManager.h  RenderService.cpp  RenderService.h  SaveService.cpp  SaveService.h  Service.cpp  Service.h  ServiceManager.cpp  ServiceManager.h  SettingsService.cpp  SettingsService.h  SoundManager.cpp  SoundManager.h  TextureManager.cpp  TextureManager.h  WorldService.cpp  WorldService.h
bobberick-framework/src/util/: FrameHandler.cpp  FrameHandler.h  InputHandler.h  RandomGenerator.cpp  RandomGenerator.h  SDL_Deleter.h  TextFormatter.cpp  TextFormatter.h  Timer.cpp  Timer.h  Vector2D.cpp  Vector2D.h  tinydir.h
bobberick-framework/tests/: CMakeLists.txt  bobberick-framework.test.cpp  main.cpp
bobberick/cmake/modules/: FindZLIB.cmake
bobberick/src/: Game.cpp  Game.h  GameState.cpp  GameState.h  TextureManager.cpp
bobberick/src/entity/: ECS.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
bobberick/src/services/: RenderService.cpp  RenderService.h  Service.h  ServiceManager.cpp
bobberick/src/util/: Vector2D.cpp
(+23 files in other folders)
